--- a/requirements.txt
+++ b/requirements.txt
@@ -9,19 +9,26 @@ colorama==0.4.6
 cryptography==44.0.0
 dnspython==2.7.0
 ecdsa==0.19.0
+email_validator==2.2.0
 fastapi==0.115.6
+fastapi-cli==0.0.6
 greenlet==3.1.1
 h11==0.14.0
+httpcore==1.0.7
 httptools==0.6.4
+httpx==0.28.1
 idna==3.7
 Jinja2==3.1.4
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
 motor==3.6.0
 passlib==1.7.4
 pyasn1==0.6.1
 pycparser==2.22
 pydantic==2.10.3
 pydantic_core==2.27.1
+Pygments==2.18.0
 PyJWT==2.10.1
 pymongo==4.9.2
 python-dotenv==1.0.1
@@ -29,11 +36,15 @@ python-jose==3.3.0
 python-multipart==0.0.19
 PyYAML==6.0.2
 requests==2.32.3
+rich==13.9.4
+rich-toolkit==0.12.0
 rsa==4.9
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
+typer==0.15.1
 typing_extensions==4.12.2
 urllib3==2.2.2
 uvicorn==0.32.1
